assets/css/main.css
/* ... */
/* @import url('https://rsms.me/inter/inter.css'); */
/* html { font-family: 'Inter', sans-serif; } */
@supports (font-variation-settings: normal) {
  html { font-family: 'Inter var', sans-serif; }
}

@font-face {
  font-family: 'work-sans-light';
  font-weight: 400;
  src: url('{{ site.baseurl }}/assets/fonts/work-sans-light.ttf');
}

@font-face {
  font-family: 'work-sans-semibold';
  font-weight: 400;
  src: url('{{ site.baseurl }}/assets/fonts/work-sans-semibold.ttf');
}

body {
  background-color: #000;
  background-image: url('{{ site.baseurl }}/assets/images/noise@2x.png');
  background-size: 1024px;
  background-repeat: repeat;
  background-attachment: fixed;
  margin: {{ page.margin }}px;
  position: relative;
  display: flex;
  flex-wrap: wrap;
  overflow: scroll;
}
body.project {
  justify-content: space-between;
}
@media screen and (min-width: {{ page.min_desktop }}px) {
  body {
    flex-wrap: nowrap;
  }
}
@media screen and (min-height: {{ page.min_desktop }}px) {
  body.home {
    flex-wrap: wrap;
  }
}
@media screen and (min-width: {{ page.med_desktop }}px) {
  body.home {
    flex-wrap: nowrap;
  }
}

.site-header,
/* .site-nav, */
.site-main {
  background-color: #fff;
}

/* HEADER */
.site-header {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.site-header--home {
  min-height: 200px;
}
.site-header--project {
  width: auto;
  height: 31px;
  position: fixed;
  overflow: hidden;
  z-index: 3;
  background-color: transparent;
  cursor: pointer;
}
@media screen and (min-width: {{ page.min_desktop }}px) {
  .site-header--home {
    width: auto;
    flex-grow: 1;
    position: relative;
  }
}
@media screen and (min-height: {{ page.min_desktop }}px) {
  .site-header--home {
    min-height: 360px;
    margin-right: 0;
  }
}
@media screen and (min-width: {{ page.med_desktop }}px) {
  .site-header--project {
    cursor: default;
    position: absolute;
  }
}

.site-header__interior {
  position: relative;
  top: 8px;
}
@media screen and (min-width: {{ page.min_desktop }}px) {
  .site-header__interior {
    position: fixed;
    top: 30%;
  }
}
@media screen and (min-height: {{ page.min_desktop }}px) {
  .site-header__interior {
    position: relative;
    top: 8px;
  }
}
@media screen and (min-width: {{ page.med_desktop }}px) {
  .site-header__interior {
    position: fixed;
    top: 230px;
  }
}

.site-header__title {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 9px 0 18px;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
}
.site-header--project:after {
  content: '× close';
  background-image: url('{{ site.baseurl }}/assets/images/dither-7@2x.png');
  background-repeat: repeat;
  background-size: 16px;
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: opacity 0.15s ease-in;
  opacity: 0;
  color: #fff;
}
input[type="checkbox"]#site-nav-toggle:checked ~ .site-header--project .site-header__title {
  opacity: 0;
}
input[type="checkbox"]#site-nav-toggle:checked ~ .site-header--project:after {
  opacity: 1;
}
@media screen and (min-width: {{ page.med_desktop }}px) {
  .site-header--project:after {
    display: none;
  }
  input[type="checkbox"]#site-nav-toggle:not(checked) ~ .site-header--project .site-header__title,
  input[type="checkbox"]#site-nav-toggle:checked ~ .site-header--project .site-header__title {
    opacity: 1;
  }
}

.planets {
  display: flex;
  justify-content: center;
  padding: 0 16px;
}
.planets--project {
  padding: 0 7px;
  flex-direction: column;
  align-items: center;
}

.planet {
  display: block;
  width: auto;
}

.info-header {
  width: 100%;
  height: 31px;
  display: flex;
  justify-content: flex-end;
}
@media screen and (min-width: {{ page.med_desktop }}px) {
  .info-header {
    justify-content: flex-start;
  }
}

.info-header__interior {
  width: auto;
  min-width: 64px;
  padding-bottom: 12px;
  border-top: 1px solid #000;
  background-color: #fff;
}

/* /HEADER */
/* NAV */
.site-nav-screen {
  /* background-color: rgba(0,0,0,0.1); */
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 150%;
  max-height: 150%;
  cursor: pointer;
}
input[type="checkbox"]#site-nav-toggle:not(:checked) ~ .site-nav-screen {
  opacity: 0;
  transform: translateX(-100%);
  transition: opacity 0.2s ease-in-out, transform 0.2s step-end;
}
input[type="checkbox"]#site-nav-toggle:checked ~ .site-nav-screen {
  opacity: 1;
  transform: translateX(0);
  transition: opacity 0.3s ease-in-out, transform 0s step-start;
}
@media screen and (min-width: {{ page.med_desktop }}px) {
  .site-nav-screen {
    display: none;
  }
}

.site-nav {
  padding: 4px 8px;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}
.site-nav--home {
  min-width: 180px;
  margin: 2px 0;
}
.site-nav--project {
  display: flex;
  flex-direction: column;
  z-index: 2;
  margin-top: 30px;
  width: calc(100% - 64px);
  max-width: 460px;
  /* uncomment below if you want nav container to always try to be as tall as .site-main */
  /* min-height: calc(100% - 40px); */
  transition: transform 0.3s ease-in-out;
  transform: translateX(calc(-100% - 100px));
  position: absolute;
}
input[type="checkbox"]#site-nav-toggle:checked ~ .site-nav--project {
  transform: translateX(0);
  border: 1px solid #000;
}
@media screen and (min-width: {{ page.min_desktop }}px) {
  .site-nav--home {
    flex-basis: 56%;
    min-height: calc(100vh - ({{ page.margin }}px * 4));
    display: flex;
    margin: 0 0 0 2px;
  }
}
@media screen and (min-height: {{ page.min_desktop }}px){
  .site-nav--home {
    flex-basis: 100%;
    min-height: 0;
    margin: 2px 0;
  }
}
/* ... */

